# dorec

./: .gitignore  LICENSE  README.md  setup.py
.github/workflows/: main.yml
configs/: hrnetv2_dualhead.yml  resnet18_ppm.yml  segnet.yml  unet.yml
docs/: api.md  config.md  dataset.md  experiment.md  loss.md  model.md  transform.md
dorec/: __init__.py  version.py
dorec/apis/: __init__.py  augment.py  inference.py  labelme2token.py  labels.txt  show_data.py  test.py  train.py
dorec/core/: __init__.py
dorec/core/evaluation/: __init__.py  eval_depth.py  eval_edge.py  eval_keypoint.py  eval_seg.py  utils.py
dorec/core/ops/: __init__.py  image.py  keypoint.py  matrix.py  pointcloud.py  tensor.py
dorec/core/utils/: __init__.py  config.py  io.py  logger.py  manager.py  misc.py  optim.py  text.py  (+1 more)
dorec/datasets/: __init__.py  builder.py  image_task_dataset.py  keypoint_task_dataset.py  utils.py
dorec/losses/: __init__.py  builder.py  task_module.py
dorec/models/: __init__.py  base.py  builder.py  segnet.py  unet.py
dorec/runners/: __init__.py  base.py  runner2d.py  utils.py
dorec_ros/: CMakeLists.txt  package.xml
dorec_ros/msg/: ArmPose.msg  Coefficient.msg  CoefficientArray.msg  DualArmPose.msg  Keypoint.msg  KeypointArray.msg  ManipPlan.msg  SegmentationMap.msg
requirements/: requirements.txt  requirements_test.txt
tests/: conftest.py
tests/apis/: test_inference.py  test_show_data.py  test_test.py  test_train.py
tools/: augment.py  check_data_variance.py  create_deepfashion_info.py  download.py  labelme2token.py  split_data.py  synthesis_img.py
(+70 files in other folders)
