<?xml version="1.0"?>
<package format="2">
  <name>dorec_ros</name>
  <version>0.0.0</version>

  <description>ROS wrapper for dorec</description>

  <maintainer email="uetake@jsk.imi.i.u-tokyo.ac.jp">Kotaro Uetake</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>rospy_tutorials</depend>
  <depend>geoemtry_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>

</package>
